--- a/organisms/auth_form.html
+++ b/organisms/auth_form.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/distdarkly/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/darkly/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   </head>
 <div class="container mt-5" style="max-width: 400px;">
   <h2 class="text-center mb-4">Connexion</h2>
