--- a/organisms/footer.html
+++ b/organisms/footer.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/distdarkly/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/darkly/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   </head>
 <body>
   <footer class="bg-dark text-white py-4 mt-5">
